cluster-setup/argocd/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: argocd-server-http
  namespace: argocd
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: argocd.57a7127dd6cb452b952f.francecentral.aksapp.io
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: http
